# ccmgr

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
npm/: package.json  postinstall.js
src/: actions.rs  app.rs  config.rs  fmt.rs  main.rs  preview.rs  session.rs  time_fmt.rs  ui.rs
