[package]
name = "ccmgr"
version = "0.1.5"
edition = "2021"
description = "A very simple TUI for managing Claude Code sessions"
license = "MIT"

[[bin]]
name = "ccmgr"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
