[package]
name = "ccmgr"
version = "0.1.6"
edition = "2021"
description = "A very simple TUI for managing Claude Code sessions"
license = "MIT"

[[bin]]
name = "ccmgr"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["serde"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
toml = "1"
unicode-segmentation = "1"
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
